--- a/requirements.txt
+++ b/requirements.txt
@@ -10,11 +10,16 @@ django-filter==24.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 idna==3.6
+iniconfig==2.0.0
 oauthlib==3.2.2
+packaging==24.0
 pillow==10.2.0
+pluggy==1.4.0
 psycopg2-binary==2.9.9
 pycparser==2.21
 PyJWT==2.8.0
+pytest==8.1.1
+pytest-django==4.8.0
 python-dotenv==1.0.1
 python3-openid==3.2.0
 pytz==2024.1
