--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cryptography==42.0.5
 defusedxml==0.7.1
 Django==5.0.3
 django-allauth==0.61.1
+django-cors-headers==4.3.1
 django-filter==24.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
